--- a/lix.cabal
+++ b/lix.cabal
@@ -7,8 +7,8 @@ cabal-version: 1.12
 name:           lix
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/lix#readme>
-homepage:       https://github.com/BeratE/lix#readme
-bug-reports:    https://github.com/BeratE/lix/issues
+homepage:       https://github.com/githubuser/lix#readme
+bug-reports:    https://github.com/githubuser/lix/issues
 author:         Berat Ertural
 maintainer:     berat.ertural@rwth-aachen.de
 copyright:      2021 Berat Ertural
@@ -25,15 +25,19 @@ source-repository head
 
 library
   exposed-modules:
-      Parser
-      LispVal
       Lambda
+      LispVal
+      Parser
+      Repl
   other-modules:
       Paths_lix
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers
+    , haskeline
+    , transformers
   default-language: Haskell2010
 
 executable lix-exe
@@ -45,7 +49,10 @@ executable lix-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
+    , haskeline
     , lix
+    , transformers
   default-language: Haskell2010
 
 test-suite lix-test
@@ -58,5 +65,8 @@ test-suite lix-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
+    , haskeline
     , lix
+    , transformers
   default-language: Haskell2010
