fix lazy evalutation of some delta rules and change constants with regular symbols, might roll back

--- a/lix.cabal
+++ b/lix.cabal
@@ -25,9 +25,9 @@ source-repository head
 
 library
   exposed-modules:
-      Lambda
-      LispVal
       Parser
+      LispVal
+      Eval
       Repl
   other-modules:
       Paths_lix
